# code-suit

./: .gitignore  .npm_live_repo_path  FEATURES.md  README.md  pyproject.toml  roadmap.md  run_mcp.bat  run_mcp.sh  tmp_codex_calibration_spec.json  tmp_codex_execution_spec.json
.codex/: config.toml
benchmarks/tasks/: sample_tasks.json
docs/dogfooding/: phase3_runbook.md  tracked_repositories.v1.json
docs/evaluation/: baseline_capabilities.v1.json  benchmark_protocol_v1.md  failure_taxonomy.v1.json  mga_hybrid_protocol_v1.md  repo_profile.template.json  report_template.md  (+1 more)
scripts/: EVALUATION.md  analyze_analytics.py  analyze_claude_usage.py  analyze_codex_comparison.py  analyze_codex_eval.py  analyze_codex_usage.py  analyze_cursor_usage.py  analyze_dogfooding.py  export_marketing_evidence.py  report_hybrid_study.py  report_live_study.py  run_codex_adoption_experiment.py  run_codex_comparison.py  run_codex_eval.py  run_live_study.py  run_mcp_benchmark.py
taskstests/: README.md  sep1686_task_probe_server.py
tests/: __init__.py  conftest.py  run_all_tests.py  test_install.py
tests/test_repos/python/: pyproject.toml  tox.ini
tests/test_repos/python/src/acme/: __init__.py
tests/test_repos/python/src/acme/core/: __init__.py  repository.py
tests/test_repos/python/src/acme/core/models/: __init__.py
tests/test_repos/python/src/acme/mcp/: __init__.py  server.py
tests/test_repos/python/src/acme/providers/: __init__.py
tests/test_repos/python/src/acme/providers/python/: __init__.py
tests/test_repos/python/tests_unittest/: test_unittest_sample.py
(+470 files in other folders)
