[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suitcode"
version = "0.1.0"
description = "SuitCode MCP server scaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1,<2",
    "packaging>=24",
    "pydantic>=2.0",
    "tiktoken>=0.8",
]

[project.scripts]
suitcode-mcp = "suitcode.mcp.server:main"

[project.optional-dependencies]
cpp = []
dev = [
    "basedpyright>=1.31",
    "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
